# bio_qcmetrics_tool

./: .cruft.json  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  Dockerfile  Makefile  README.md  build-gdc-docker.sh  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
bio_qcmetrics_tool/: __init__.py  __main__.py
bio_qcmetrics_tool/modules/: base.py  exceptions.py
bio_qcmetrics_tool/modules/fastqc/: __init__.py  export_fastqc.py
bio_qcmetrics_tool/modules/picard/: __init__.py  codec.py  export_picard.py
bio_qcmetrics_tool/modules/picard/metrics/: QualityByCycleMetrics.py  QualityDistributionMetrics.py  RnaSeqMetrics.py  base.py
bio_qcmetrics_tool/modules/readgroups/: __init__.py  export_readgroups.py
bio_qcmetrics_tool/modules/samtools/: __init__.py  export_flagstats.py  export_idxstats.py  export_stats.py
bio_qcmetrics_tool/modules/scrna/: __init__.py  export_scrna_metrics.py
bio_qcmetrics_tool/modules/star/: __init__.py  export_star.py
bio_qcmetrics_tool/utils/: logger.py  parse.py
tests/: test_fastqc.py  test_picard.py  test_readgroups.py  test_samtools.py  test_scrna.py  test_star.py  test_subcommand.py  test_utils.py  utils.py
tests/data/: A1.sorted.dup.recal.all.metrics.quality_by_cycle_metrics  A1.sorted.dup.recal.all.metrics.quality_distribution_metrics  CTC-1-AA-B2.star.bam.rnaseqmetrics.txt  README.md  readgroups.json  samtools.flagstat.log.txt  scrna.metrics.csv  test_star_counts.txt
tests/unit/: test_main.py
