[metadata]
name = bio_qcmetrics_tool
description = Tools for parsing and formatting QC metrics
license_files =
	LICENSE
author = Charles Czysz
author_email = czysz@uchicago.edu
url = https://github.com/NCI-GDC/bio_qcmetrics_tool
long_description = file:README.md
long_description_content_type = text/markdown
python_requires = >=3.8
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
install_requires =
        pandas
zip_safe = False
include_package_data = True
packages = find:
setup_requires = 
	setuptools_scm>=6.0


[options.entry_points]
console_scripts =
        bio_qcmetrics_tool = bio_qcmetrics_tool.__main__:main

[coverage:run]
source = bio_qcmetrics_tool
branch = true
parallel = true

[coverage:report]
show_missing = true
omit =
        .tox/*
exclude_lines =
    \#\s*pragma: no cover
    ^\s*raise AssertionError\b
    ^\s*raise NotImplementedError\b
    ^\s*return NotImplemented\b
    ^\s*raise$
    ^if __name__ == ['"]__main__['"]:$
